# TCP_LCD

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/Multicore_client/: CMakeLists.txt  TCP_Client_multicore.c
examples/ili9341/: CMakeLists.txt
examples/ili9341/framebuffer/: CMakeLists.txt
examples/ili9341/sprite_graphics/: CMakeLists.txt  mode1_demo.c
examples/ili9341/text/: CMakeLists.txt  mode0_demo.c
libraries/pico-ili9341/: CMakeLists.txt  ili9341.c  mode0.c  mode1.c  mode2.c
